fixed main layout bug

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -29,9 +29,6 @@ body {
 
 main {
   flex-grow: 1;
-  & > * {
-    height: 100%;
-  }
 }
 
 .container {
